--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.0.0
 altair==5.1.2
 annotated-types==0.6.0
+anyio==4.0.0
 astunparse==1.6.3
 attrs==23.1.0
 blinker==1.6.3
@@ -24,8 +25,11 @@ google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 googleapis-common-protos==1.61.0
 grpcio==1.59.0
+h11==0.14.0
 h5py==3.10.0
+httpcore==0.18.0
 httplib2==0.22.0
+httpx==0.25.0
 huggingface-hub==0.17.3
 idna==3.4
 importlib-metadata==6.8.0
@@ -72,6 +76,7 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
 regex==2023.10.3
+replicate==0.15.5
 requests==2.29.0
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
@@ -85,6 +90,7 @@ scipy==1.11.3
 sentencepiece==0.1.99
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.0
 streamlit==1.28.0
 streamlit-option-menu==0.3.6
 sympy==1.12
@@ -109,5 +115,5 @@ validators==0.22.0
 watchdog==3.0.0
 Werkzeug==3.0.1
 wrapt==1.14.1
-xgboost
+xgboost==2.0.1
 zipp==3.17.0
